name:                servant-hello-world
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/statusfailed/servant-hello-world#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Wilson
maintainer:          sf@statusfailed.com
copyright:           2017 Paul Wilson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:         Please see the README on Github at <https://github.com/statusfailed/servant-hello-world#readme>

library
  hs-source-dirs:      src
  exposed-modules:     ServantHelloWorld
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-server
                     , time
                     , aeson
  default-language:    Haskell2010

executable servant-hello-world-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-hello-world
                     , servant
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite servant-hello-world-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-hello-world
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/statusfailed/servant-hello-world
